# test_task_api

./: .env  docker-compose.yaml
enterprises/: .gitignore  Dockerfile  README.md  conftest.py  docker-entrypoint.sh  pyproject.toml  pytest.ini  users.json
enterprises/api/: mixins.py  serializers.py  urls.py  views.py
enterprises/api/tests/: tests.py
enterprises/api/tests/fixtures/: fixture_data.py  fixture_users.py
enterprises/enterprises/: asgi.py  settings.py  urls.py  wsgi.py
enterprises/organizations/: admin.py  apps.py  models.py
enterprises/organizations/migrations/: 0001_initial.py
